Start of docs; some reorganising; fix the wait time algorithm.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     },
     "require": {
+        "php": "^7.2|^7.3",
         "php-http/client-implementation": "1.0",
         "psr/cache-implementation": "1.0"
     }
